infra/k8s/price-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-simulator
  namespace: realtime-pricing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-simulator
  template:
    metadata:
      labels:
        app: price-simulator
    spec:
      containers:
        - name: price-simulator
          image: price-simulator:dev
          imagePullPolicy: IfNotPresent
