infra/k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: realtime-pricing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: api-gateway:dev   # byt till din registry-image sen
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8088
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8088
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8088
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: realtime-pricing
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
  type: ClusterIP
